<resources>
    <string name="app_name">Secret Santa</string>
    <string name="action_about">About</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="action_licenses">Licenses</string>
    <string name="action_ok">OK</string>
    <string name="action_pick_names">Pick Names</string>
    <string name="about_text">Secret Santa is a simple app for managing and organizing a Secret Santa gift share amongst friends and family.</string>
    <string name="title_activity_license">LicenseActivity</string>
    <string name="licenses_title">Licenses</string>
    <string name="google_material_design_icons">Material Design Icons\nGoogle, Inc.\n<a href="https://material.io/icons/">https://material.io/icons/</a>\nLicense:\n<a href="https://github.com/google/material-design-icons/blob/master/LICENSE">https://github.com/google/material-design-icons/blob/master/LICENSE</a></string>
    <string name="android_support_appcompat_v7_license">android-support-appcompat-v7\nGoogle, Inc.\n<a href="https://developer.android.com/topic/libraries/support-library/index.html">https://developer.android.com/topic/libraries/support-library/index.html</a>\nLicense:\n<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a></string>
    <string name="android_support_cardview_v7_license">android-support-cardview-v7\nGoogle, Inc.\n<a href="https://developer.android.com/topic/libraries/support-library/index.html">https://developer.android.com/topic/libraries/support-library/index.html</a>\nLicense:\n<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a></string>
    <string name="android_support_design_license">android-support-design\nGoogle, Inc.\n<a href="https://developer.android.com/topic/libraries/support-library/index.html">https://developer.android.com/topic/libraries/support-library/index.html</a>\nLicense:\n<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a></string>
    <string name="android_support_recyclerview_v7_license">android-support-recyclerview-v7\nGoogle, Inc.\n<a href="https://developer.android.com/topic/libraries/support-library/index.html">https://developer.android.com/topic/libraries/support-library/index.html</a>\nLicense:\n<a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a></string>
    <string name="title_activity_participant">ParticipantActivity</string>
    <string name="add_participant_title">Add Participant</string>
    <string name="edit_participant_title">Edit Participant</string>
    <string name="name_pick_title">Pick Names</string>
    <string name="participant_name_hint">Name</string>
    <string name="participant_email_hint">Email</string>
    <string name="participant_added_success">New participant %s added successfully.</string>
    <string name="participant_updated_success">Participant %s updated successfully.</string>
    <string name="participant_added_failed">Failed to add new participant.</string>
    <string name="participant_updated_failed">Failed to update participant with name %s.</string>
    <string name="participant_removed_success">%s removed successfully.</string>
    <string name="participant_name_required">The name field is required.</string>
    <string name="participant_email_required">The email address field is required.</string>
    <string name="participant_email_invalid">The email address provided is invalid.</string>
    <string name="exclude_list_description">Select all of the participants from the list below for whom the current participant should not buy for (for example, a spouse).</string>
    <string name="exclude_list_too_large">A participant may only exclude at most %d other participants.</string>
    <string name="title_activity_name_pick">NamePickActivity</string>
    <string name="pairing_message">%1$s buys for %2$s.</string>
    <string name="error_dialog_title">Error</string>
    <string name="pairing_error_message">Error generating Secret Santa pairings, please try again and verify the participant exclusion lists.</string>
    <string name="email_subject">Secret Santa %d</string>
    <string name="email_body">Merry Christmas, All!\n\nThis message is to let you know that you are part of a Shhhhecret Santa! The following is the list of who is buying for whom:\n\n%s\n\nCheers and Merry Christmas!</string>
    <string name="email_chooser_title">Select e-mail app to send with&#8230;</string>
</resources>
