<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_license"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gf.secretsanta.LicenseActivity"
    tools:showIn="@layout/activity_license">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/appcompat"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/android_support_appcompat_v7_license"
                android:gravity="center"
                android:textSize="@dimen/text_small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cardview"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/android_support_cardview_v7_license"
                android:gravity="center"
                android:textSize="@dimen/text_small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/design"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/android_support_design_license"
                android:gravity="center"
                android:textSize="@dimen/text_small"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recyclerview"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:text="@string/android_support_recyclerview_v7_license"
                android:gravity="center"
                android:textSize="@dimen/text_small"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
